# rust_matrix_bot

./: Cargo.toml  LICENSE  README.md  config.toml.example
src/: bot.rs  config.rs  emoji_verification.rs  login.rs  main.rs  session.rs  sync.rs  transaction.rs
