[package]
name = "rust_matrix_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { version = "0.16.0", features = ["e2e-encryption"] }
tokio = { version = "1.14.0", features = ["full"] }
anyhow = "1.0.100"
tracing-subscriber = "0.3.20"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3.20"
url = "2.5.7"
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.145"
dirs = "6.0.0"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11.27", features = ["json"] }
chrono = "0.4.31"
toml = "0.7"
